# media-debuger

./: .gitignore  CMakeLists.txt  LICENSE  MediaDebuger.pro  README.en.md  README.md  README.zh_CN.md  REUSE.toml  TODO.txt  build_config.mk  clean_build_cache.sh  git_fetch.sh  git_push.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  media-debuger.pro  zcodecflagparser.cpp  zcodecflagparser.h
Common/: zffprobe.cpp  zffprobe.h  zwindowhelper.h
LICENSES/: MIT.txt
Resources/: resources.qrc
Widgets/: infowidgets.cpp  infowidgets.h  infowidgets.ui
assets/: dde-filemanager-contextmenu.conf  dfm-xmenu-media-debuger6.conf  media-debuger-dbus-service  media-debuger.conf  media-debuger.desktop  media-debuger.py  media-debuger6-dbus-service  media-debuger6.desktop  nautilus-contexmenu-template.py  nautilus-contextmenu.py  nautilus-contextmenu6.py  org.media.mediadebuger.service  org.media.mediadebuger.xml  org.media.mediadebuger6.service  org.media.mediadebuger6.xml  resources.qrc  uos-contexmenu-template.conf
cmake/: FindFFmpegCompat.cmake  FindQtCompat.cmake
common/: checkboxsynchronizer.cpp  checkboxsynchronizer.h  commandexecutor.cpp  commandexecutor.h  common.cpp  common.h  flowlayout.cpp  flowlayout.h  functioninterface.cpp  functioninterface.h  lineeditsynchronizer.cpp  lineeditsynchronizer.h  qtcompat.h  singleton.h  spinboxsynchronizer.cpp  spinboxsynchronizer.h  statesynchronizer.cpp  statesynchronizer.h  synchronizermacros.h  tableheadermanager.cpp  tableheadermanager.h  zffprobe.cpp  zffprobe.h  zlogger.cpp  zlogger.h  zprocess.cpp  zprocess.h  ztexteditor.cpp  ztexteditor.h  ztexthighlighter.cpp  ztexthighlighter.h  zwindowhelper.cpp  zwindowhelper.h
debian/: changelog  control  copyright  debhelper-build-stamp  dfm-xmenu-media-debuger.install  dfm-xmenu-media-debuger6.install  files  media-debuger-dbus.install  media-debuger-dde-filemanager-contextmenu.install  media-debuger-nautilus-contextmenu.install  media-debuger.substvars  media-debuger6-dbus.install  rules
docs/: TODO.txt  ffmpeg.md  ffprobe.md  qt_optimization_summary.md  qt_version_detection.md  show_format.md  video_sources.md
model/: fileshistorymodel.cpp  fileshistorymodel.h  logmodel.cpp  logmodel.h  mediainfotabelmodel.cpp  mediainfotabelmodel.h  multicolumnsearchproxymodel.cpp  multicolumnsearchproxymodel.h
resources/: resources.qrc
third_part/QJsonModel/: CMakeLists.txt  QJsonModel.pri
(+196 files in other folders)
